--- a/purpose.html
+++ b/purpose.html
@@ -33,6 +33,15 @@ crossorigin="anonymous"
         vertical-align: center;
         text-align: center;;
     }
+    h8{
+        font-family:"Goldman";
+        font-size: 400%;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        vertical-align: center;
+        text-align: center;;
+    }
+
     h2{
         font-family:"Goldman";
         font-size: 200%;
@@ -285,6 +294,9 @@ crossorigin="anonymous"
 <!--MAP-->
 
 <!-- Contact Form -->
+
+<center><h8>CONTACT DETAILS</h8></center>
+<br>
 <div class="container">
   <div class="row">
     <div class="col-md-6">
