--- a/persona.html
+++ b/persona.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/png" href="https://i.ibb.co/XVD6857/druidd.gif"/>
+	<link rel="shortcut icon" type="image/png" href="https://i.ibb.co/n7Zm7bP/YxoIETK.gif"/>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- jQuery library -->
@@ -29,7 +29,7 @@ crossorigin="anonymous"
         font-family:"Goldman";
         font-size: 800%;
         text-align: center;
-        color: rgb(153, 0, 255);
+        color: rgb(255, 255, 255);
         vertical-align: center;
         text-align: center;;
     }
@@ -130,6 +130,14 @@ crossorigin="anonymous"
         color: #fff;
     }
     .carousel { width:840px; height:360px; }
+    .zoom {
+  transition: transform .2s;
+}
+.zoom:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5); 
+}
     </style>
 </head>
 <body>
@@ -187,9 +195,9 @@ crossorigin="anonymous"
                     Available for content production, including videography, video editing, writing, and communications planning and strategy.</p>
                     <center>
 
-                      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                      <div class="zoom"><button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
                         <h7>ONLINE PORTFOLIO</h7>
-                      </button>
+                      </button></div>
                     </center>
                   </p>
                     <div style="min-height: 10px;">
@@ -210,7 +218,9 @@ crossorigin="anonymous"
                 </div>
               </div>
             </center>
-
+<br>
+<br>
+<br>
             <center>
 
 
@@ -291,7 +301,7 @@ crossorigin="anonymous"
           <p>
             gsus@creatives.com
           </p>
-          <p> +639-------20</p>
+          <p> +639 8527 8251</p>
         </div>
         <!-- Grid column -->
         <div class="input-group">
