--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/png" href="https://i.ibb.co/XVD6857/druidd.gif"/>
+	<link rel="shortcut icon" type="image/png" href="https://i.ibb.co/n7Zm7bP/YxoIETK.gif"/>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- jQuery library -->
@@ -285,8 +285,8 @@ crossorigin="anonymous"
                           </div>
                           <div class="card-body">
                             <h5 class="card-title">A VIDEO COMMISSION FOR A VTUBER</h5>
-                            <br>
-                            <p class="card-text"><center>A highlights of fun times, as well as rating uncanny food they've tried. </center>
+
+                            <p class="card-text"><center>A VTuber is a virtual avatar or character that is used by content creators to stream or create content on the internet, while VTubing refers to the practice of doing so, in this scenario I was commissioned to do a highlights of a collab with their fun times, as well as rating uncanny food they've tried. </center>
                               <br>
                             </div>
                           </center>
@@ -304,9 +304,9 @@ crossorigin="anonymous"
                           <div class="card-header">
                           </div>
                           <div class="card-body">
-                            <h5 class="card-title">A LEAGUE OF LEGENDS VIDEO COMMISSION</h5>
-                            <br>
-                            <p class="card-text"><center>A highlights of a solo top player who utilizes Aatrox's ability </center>
+                            <h5 class="card-title">LEAGUE OF LEGENDS VIDEO COMMISSION</h5>
+
+                            <p class="card-text"><center>League of Legends is a fast-paced, team-based multiplayer online battle arena game. Players choose from a variety of champions and work together to destroy the opposing team's base, in this case a client was refered to me to do a highlights of a solo top player who utilizes Aatrox's ability </center>
                               <br>
                             </div>
                           </center>
@@ -325,8 +325,8 @@ crossorigin="anonymous"
                           </div>
                           <div class="card-body">
                             <h5 class="card-title">GENSHIN IMPACT SUMMON HIGHLIGHTS</h5>
-                            <br>
-                            <p class="card-text"><center>A highlights wherein one must suffer on the consequence of burning primogems. </center>
+
+                            <p class="card-text"><center>Genshin Impact is a popular action role-playing video game developed by miHoYo. It features an open-world environment where players can explore, fight monsters, and solve puzzles while collecting various characters with unique abilities. This is a highlights wherein one must suffer on the consequence of burning primogems (a unique currency that the game has and has to be used to get some weapons, characters and etc.). </center>
                               <br>
                             </div>
                           </center>
@@ -344,8 +344,8 @@ crossorigin="anonymous"
                           </div>
                           <div class="card-body">
                             <h5 class="card-title">A HIGHLIGHTS WHERE IT ALL STARTED.</h5>
-                            <br>
-                            <p class="card-text"><center>Fan of norse mythology and VIKINGS? Say no more. </center>
+
+                            <p class="card-text"><center>Fan of norse mythology and VIKINGS? Say no more. Valheim is a Norse-themed survival game where players must explore and battle their way through a procedurally generated world filled with dangerous creatures and harsh weather conditions. With its immersive gameplay, stunning graphics, and multiplayer capabilities, it has captured the hearts of gamers worldwide. </center>
                               <br>
                             </div>
                           </center>
@@ -357,7 +357,7 @@ crossorigin="anonymous"
                     <br>
                     <h1>PROJECTS</h1>
                     <br>
-              <h2>GUNITA SDE</h2>
+              <h2>GUNITA INTERLUDE PART</h2>
               <iframe width="900" height="515" src="https://www.youtube.com/embed/vNT1jh6gYSM">
             </iframe>
             <br>
@@ -367,7 +367,7 @@ crossorigin="anonymous"
                   <div class="card-header">
                   </div>
                   <div class="card-body">
-                    <h5 class="card-title">A SAMPLE OF SDE BUILDUP PART</h5>
+                    <h5 class="card-title">A SAMPLE OF BUILDUP PART</h5>
                     <br>
                     <p class="card-text"><center>A branding agency which aims to create remarkable designs worth celebrating.</center>
                       <br>
@@ -431,7 +431,7 @@ crossorigin="anonymous"
               <div class="card-header">
               </div>
               <div class="card-body">
-                <h5 class="card-title">AN SDE VIDEO BRANDING PROPOSAL FOR THE CITY GOVERNMENT OF LIGAO ALBAY</h5>
+                <h5 class="card-title">A VIDEO BRANDING PROPOSAL FOR THE CITY GOVERNMENT OF LIGAO ALBAY</h5>
                 <br>
                 <p class="card-text"><center>A brand design project for a travel agency focused on showcasing the beauty of Ligao Albay.</center>
                   <br>
@@ -440,10 +440,7 @@ crossorigin="anonymous"
         <br>
         <br>
         <br>
-
-
-
-<br>
+        <br>
 
 <div class="col">
     <h2>INTRODUCING MIT AGENCY</h2>
@@ -458,16 +455,16 @@ crossorigin="anonymous"
 <h5 class="card-title">A SHORT REEL WHICH SHOWCASES THE FINEST WORKS</h5>
 <br>
 <p class="card-text"><center>A video reel which offers clients the best that they could have.</center>
-<br>
+    <br>
 </div>
 </center>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
 
-<br>
-<br>
-<br>
+        <br>
+        <br>
+        <br>
 <h1>CINEMATIC </h1>
 <br>
   <div class="col">
@@ -481,7 +478,7 @@ crossorigin="anonymous"
 </div>
 <div class="card-body">
 <h5 class="card-title">A 30 SECONDS ROTARY PSA ENTRY</h5>
-<br>
+
 <p class="card-text"><center>A visual representation on how the mind of a child can be exploited by a wolf in a sheep's clothing. </center>
 <br>
 </div>
