--- a/purpose.html
+++ b/purpose.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/png" href="https://i.ibb.co/XVD6857/druidd.gif"/>
+	<link rel="shortcut icon" type="image/png" href="https://i.ibb.co/n7Zm7bP/YxoIETK.gif"/>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- jQuery library -->
@@ -105,7 +105,7 @@ crossorigin="anonymous"
     .btn:hover{
         background: rgb(153, 0, 255);
         transition: .9s;
-        color: black;
+        color: rgb(255, 255, 255);
         border: transparent;
     }
     .btn.primary{
@@ -138,6 +138,14 @@ crossorigin="anonymous"
         color: #fff;
     }
     .carousel { width:340px; height:160px; }
+    .zoom {
+  transition: transform .2s;
+}
+.zoom:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5);
+}
     </style>
 </head>
 <body>
@@ -195,10 +203,10 @@ crossorigin="anonymous"
             <div class="progress-bar w-45 progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Example with label" style="width: 45%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">45%</div>
           </div>
           <br>
-           <!-- Button trigger modal -->
+           <!-- Button trigger modal --><div class="zoom">
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
     <h7>ZERO HUNGER</h7>
-  </button>
+  </button></div>
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -229,10 +237,10 @@ crossorigin="anonymous"
             <div class="progress-bar w-60 progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Example with label" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">60%</div>
           </div>
           <br>
-          <!-- Button trigger modal -->
+          <!-- Button trigger modal --><div class="zoom">
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     <h7>QUALITY EDUCATION</h7>
-  </button>
+  </button></div>
 
   <!-- Modal -->
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -285,9 +293,9 @@ crossorigin="anonymous"
       <br>
       <br>
       <br>
-       <!-- Links -->
-        <a href="https://sdgs.un.org/" class="text-reset"><h7>Click here to find out more about the Sustainable Development Goals.</h7></a>
-  </center>
+       <!-- Links --><div class="zoom"><button type="button" class="btn btn-secondary">
+        <a href="https://sdgs.un.org/" class="text-reset"><h7>Click here to find out more about the Sustainable Development Goals.</h7>
+  </center></button></a></div>
 <br>
 <br>
 <br>
@@ -320,7 +328,7 @@ crossorigin="anonymous"
           />
         </div>
         <div class="mb-3">
-          <label for="message" class="form-label"><h7>Commission request:</h7></label>
+          <label for="message" class="form-label"><h7>Commission request</h7></label>
           <textarea
             class="form-control"
             id="location"
@@ -328,13 +336,13 @@ crossorigin="anonymous"
             name="loc"
           ></textarea>
         </div><center>
-        <button type="submit" class="btn btn-primary"><h5>Submit</h5></button></center>
+        <button type="submit" class="btn btn-primary"><h7>Submit</h7></button></center>
       </form>
     </div>
     <div class="col-md-6">
       <!-- Google Maps goes here -->
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3582.752458913765!2d-81.38677328498488!3d28.541168982446987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77b16c9c186a5%3A0x8e24a4a7ae23c2f!2sWalt%20Disney%20World!5e0!3m2!1sen!2sus!4v1617025762529!5m2!1sen!2sus"
+        src="https://maps.google.com/maps?q=manila philippines intramuros&t=&z=10&ie=UTF8&iwloc=&output=embed"
         width="100%"
         height="450"
         style="border: 0"
@@ -344,6 +352,10 @@ crossorigin="anonymous"
     </div>
   </div>
 </div>
+<br>
+<br>
+<br>
+<br>
 
 
 <!--MAP-->
@@ -430,7 +442,7 @@ crossorigin="anonymous"
           <p>
             gsus@creatives.com
           </p>
-          <p> +639-------20</p>
+          <p> +639 8527 8251</p>
         </div>
         <!-- Grid column -->
         <div class="input-group">
