--- a/services.html
+++ b/services.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/png" href="https://i.ibb.co/XVD6857/druidd.gif"/>
+<!-- Favicon -->
+<link rel="shortcut icon" type="image/png" href="https://i.ibb.co/n7Zm7bP/YxoIETK.gif"/>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- jQuery library -->
@@ -111,7 +111,7 @@ crossorigin="anonymous"
         font-family: "Roboto";
     }
     body{
-        background-image: url(https://external-preview.redd.it/6rP6f14VtOUHkmiaQFgKTEuh-o5JWhsgVG_GGELIdhM.jpg?auto=webp&s=f261546e3507de323929d37bb53b0db128e4f668);
+        background-image: url(https://images.hdqwalls.com/download/jinx-and-vi-league-of-legends-in-arcane-4k-i7-1336x768.jpg);
         background-repeat: vertical;
         background-size: 100% auto;
         width: 100%;
@@ -137,6 +137,14 @@ crossorigin="anonymous"
         color: #fff;
     }
     .carousel { width:340px; height:160px; }
+    .zoom {
+  transition: transform .2s;
+}
+.zoom:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5);
+}
     </style>
 </head>
 <body>
@@ -184,10 +192,10 @@ crossorigin="anonymous"
 <br>
 <center>
     <p>
-    <center>
+    <center><div class="zoom">
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
         <h2>SERVICES OFFERED</h2>
-      </button>
+      </button></div>
     </center>
   </p>
     <div style="min-height: 10px;">
@@ -228,7 +236,9 @@ crossorigin="anonymous"
   <h7>REACH OUT</h7>
 </button>
 </center>
-
+<br>
+<br>
+<br>
 
 <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
   <div class="offcanvas-header">
@@ -358,7 +368,7 @@ crossorigin="anonymous"
           <p>
             gsus@creatives.com
           </p>
-          <p> +639-------20</p>
+          <p> +639 8527 8251</p>
         </div>
         <!-- Grid column -->
         <div class="input-group">
